force-app/main/default/objects/Flow_Health_Snapshot__c/Flow_Health_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Flow Health Snapshot</label>
    <pluralLabel>Flow Health Snapshots</pluralLabel>
    <description>Stores a point-in-time health analysis result for a Salesforce Flow, enabling historical trend tracking and comparison.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
        <displayFormat>FHS-{000000}</displayFormat>
    </nameField>
</CustomObject>