force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Critical_Count__c.field-meta.xml
<CustomField>
    <fullName>Critical_Count__c</fullName>
    <label>Critical Count</label>
    <description>Number of Critical severity findings.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>