force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Findings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Findings_JSON__c</fullName>
    <label>Findings JSON</label>
    <description>Serialized JSON of all findings from the analysis. Used for PDF report generation and historical detail drill-down.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>