force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Flow_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Developer_Name__c</fullName>
    <label>Flow Developer Name</label>
    <description>The API/developer name of the analyzed flow. Used as the primary lookup key for trend queries.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <externalId>true</externalId>
</CustomField>