force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Label__c</fullName>
    <label>Flow Label</label>
    <description>The display label of the flow at the time of analysis.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>