force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <description>Letter grade (A, B, C, D, F) based on the health score.</description>
    <type>Text</type>
    <length>1</length>
    <required>true</required>
</CustomField>