force-app/main/default/objects/Flow_Health_Snapshot__c/fields/High_Count__c.field-meta.xml
<CustomField>
    <fullName>High_Count__c</fullName>
    <label>High Count</label>
    <description>Number of High severity findings.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>