force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Low_Count__c.field-meta.xml
<CustomField>
    <fullName>Low_Count__c</fullName>
    <label>Low Count</label>
    <description>Number of Low severity findings.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>