force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Medium_Count__c.field-meta.xml
<CustomField>
    <fullName>Medium_Count__c</fullName>
    <label>Medium Count</label>
    <description>Number of Medium severity findings.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>