force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <description>The flow process type at the time of analysis (e.g., AutoLaunchedFlow, RecordTriggeredFlow).</description>
    <type>Text</type>
    <length>100</length>
</CustomField>