force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Scan_Type__c.field-meta.xml
<CustomField>
    <fullName>Scan_Type__c</fullName>
    <label>Scan Type</label>
    <description>Whether this snapshot was taken during a Single flow analysis or a Bulk org scan.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>