force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <description>Health score from 0 to 100.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>