force-app/main/default/objects/Flow_Health_Snapshot__c/fields/Total_Findings__c.field-meta.xml
<CustomField>
    <fullName>Total_Findings__c</fullName>
    <label>Total Findings</label>
    <description>Total number of health findings identified during analysis.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>